tests/baselines/reference/intersectionTypeAssignment.errors.txt
tests/cases/conformance/types/intersection/intersectionTypeAssignment.ts(8,1): error TS2322: Type '{ a: 文字; }' is not assignable to type '{ a: 文字; b: 文字; }'.
  Property 'b' is missing in type '{ a: 文字; }'.
tests/cases/conformance/types/intersection/intersectionTypeAssignment.ts(9,1): error TS2322: Type '{ a: 文字; }' is not assignable to type '{ a: 文字; } & { b: 文字; }'.
  Type '{ a: 文字; }' is not assignable to type '{ b: 文字; }'.
    Property 'b' is missing in type '{ a: 文字; }'.
tests/cases/conformance/types/intersection/intersectionTypeAssignment.ts(13,1): error TS2322: Type '{ b: 文字; }' is not assignable to type '{ a: 文字; b: 文字; }'.
  Property 'a' is missing in type '{ b: 文字; }'.
tests/cases/conformance/types/intersection/intersectionTypeAssignment.ts(14,1): error TS2322: Type '{ b: 文字; }' is not assignable to type '{ a: 文字; } & { b: 文字; }'.
  Type '{ b: 文字; }' is not assignable to type '{ a: 文字; }'.
    Property 'a' is missing in type '{ b: 文字; }'.


==== tests/cases/conformance/types/intersection/intersectionTypeAssignment.ts (4 errors) ====
    var a: { a: string };
    var b: { b: string };
    var x: { a: string, b: string };
    var y: { a: string } & { b: string };
    
    a = x;
    a = y;
    x = a;  // Error
    ~
!!! error TS2322: Type '{ a: 文字; }' is not assignable to type '{ a: 文字; b: 文字; }'.
!!! error TS2322:   Property 'b' is missing in type '{ a: 文字; }'.
    y = a;  // Error
    ~
!!! error TS2322: Type '{ a: 文字; }' is not assignable to type '{ a: 文字; } & { b: 文字; }'.
!!! error TS2322:   Type '{ a: 文字; }' is not assignable to type '{ b: 文字; }'.
!!! error TS2322:     Property 'b' is missing in type '{ a: 文字; }'.
    
    b = x;
    b = y;
    x = b;  // Error
    ~
!!! error TS2322: Type '{ b: 文字; }' is not assignable to type '{ a: 文字; b: 文字; }'.
!!! error TS2322:   Property 'a' is missing in type '{ b: 文字; }'.
    y = b;  // Error
    ~
!!! error TS2322: Type '{ b: 文字; }' is not assignable to type '{ a: 文字; } & { b: 文字; }'.
!!! error TS2322:   Type '{ b: 文字; }' is not assignable to type '{ a: 文字; }'.
!!! error TS2322:     Property 'a' is missing in type '{ b: 文字; }'.
    
    x = y;
    y = x;
    